<resources>
    <string name="app_name">Free Food - Like Bhandara</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Test Ads -->
    <string name="app_id_test">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <!-- Live Ids -->
    <string name="app_id_live">ca-app-pub-8240465965818969~3460935494</string>
    <string name="banner_ad_id_live">ca-app-pub-8240465965818969/3324369979</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="bhandara">Bhandara</string>
    <string name="community">Community</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="address">Address</string>
    <string name="village">Village</string>
    <string name="city">City</string>
    <string name="pincode">PinCode</string>
    <string name="signup">SIGNUP</string>
    <string name="signin">SIGNIN</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already account?</string>
    <string name="share_free_food_location">Share free food location</string>
    <string name="offers">Offers</string>
    <string name="search">search</string>
    <string name="notification">Notification</string>
    <string name="find_free_food">Find Free Food</string>
    <string name="cookin">Cookin</string>
    <string name="share_location">Share location</string>
    <string name="donation">Donation</string>
    <string name="store">Store</string>
    <string name="post_bhandara">Post Bhandara</string>
    <string name="user_name">User Name</string>
    <string name="punya_coins">Punya Coins</string>
    <string name="_0">0</string>
    <string name="user_email_address">User Email Address</string>
    <string name="logout">Logout</string>
    <string name="user_current_location">User Current Location</string>
    <string name="update_your_profile_here">Update Your Profile Here</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="enter_your_mobile_no">Enter Your Mobile No.</string>
    <string name="update_now">Update Now</string>
    <string name="cancel">Cancel</string>
    <string name="location_list">Location List</string>
    <string name="map_view">Map View</string>
    <string name="_5_hours_ago">5 hours ago</string>
    <string name="post_description">Post Description</string>
    <string name="floating_button">floating Button</string>
    <string name="description">Description</string>
    <string name="create_your_post">Create Your Post</string>
    <string name="type_something_here">Type Something Here...</string>
    <string name="camera_photo">camera photo</string>
    <string name="file_photo">file photo</string>
    <string name="share">Share</string>
    <string name="can_publish_your_contact">Can Publish Your Contact</string>
    <string name="user_profile">User Profile</string>
    <string name="free_food">Free Food</string>
    <string name="recent_bhandara">RECENT BHANDARA</string>
    <string name="daily_bhandara">DAILY BHANDARA</string>

    <string name="action_settings">Settings</string>
    <string name="events">Events</string>
    <string name="enjoy_bhandara_every_day">Enjoy Bhandara Every Day</string>
    <string name="celebrate_with_free_food_app">Celebrate with Free Food App</string>
    <string name="offers_for_you">OFFERS FOR YOU</string>
    <string name="search_for_bhandara">Search for Bhandara</string>
    <string name="slider_image">Slider Image</string>
    <string name="enjoy_it">Enjoy it !</string>
    <string name="crafted_by_navneet_shakya">Crafted By Navneet Shakya</string>
    <string name="free_food_caps">FREE FOOD</string>
    <string name="like_bhandara">Like Bhandara</string>
    <string name="offers_caps">BOOK CHEF</string>
    <string name="post_bhandara_caps">SHARE BHANDARA</string>
    <string name="for_you">For You</string>
    <string name="donation_caps">DONATION</string>
    <string name="for_public">For Public</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="my_uploaded_list">My Uploaded List</string>
    <string name="daily_bhandara_post">Daily Bhandara Post</string>
    <string name="location_img">location_img</string>
    <string name="_100_coins">100 Coins</string>
    <string name="_100">100</string>
    <string name="share_bhandara_location">Share Bhandara Location</string>
    <string name="img_back">img_back</string>
    <string name="location_details">Location Details</string>
    <string name="choose_map_current_location_tap_on_box">Choose Map Current Location (Tap on Box)</string>
    <string name="share_now">Share Now</string>
    <string name="enter_bhandara_address">Enter Bhandara Address</string>
    <string name="enter_bhandara_date">Open Calender</string>
    <string name="bhandara_address">Bhandara Address</string>
    <string name="bhandara_date">Bhandara Date</string>
    <string name="open_details">Open Details</string>
    <string name="search_bhandara">Search Bhandara</string>
    <string name="_84">84</string>
    <string name="search_for">Search for</string>
    <string name="for_event">For Event</string>
    <string name="contact_free_food_app_support">Contact Free Food App Support</string>
    <string name="rate_free_food_app">Rate Free Food App</string>
    <string name="feedback">Feedback</string>
    <string name="version">Version</string>
    <string name="or_continue_with">Or Continue with</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_a_member">Not a member?</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_in_here">Sign in Here</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="select_day">Select Day</string>
    <string name="location_shared_by">Location Shared By:</string>
    <string name="_10_days_ago">10 Days Ago</string>
    <string name="day">Day</string>
    <string name="time_and_schedule_for_food_distribution">Time and Schedule for Food Distribution</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="week_days">Week Days</string>
    <string name="bhandara_details">Bhandara Details</string>
    <string name="time">--:--:--</string>
    <string name="bhandara_image">bhandara_image</string>
    <string name="add_chef">+ Add Chef</string>
    <string name="book_a_chef_for_event">Book A Chef For Event</string>
    <string name="book">Book</string>
    <string name="call_chef">Call Chef</string>
    <string name="give_all_details_about_event">Give All Details About Event</string>
    <string name="no_of_peoples">No of Peoples</string>
    <string name="enter_no_of_peoples">Enter No Of Peoples</string>
    <string name="event_address">Event Address</string>
    <string name="enter_event_address">Enter Event Address</string>

    <style name="bhandara_location">Bhandara Location</style>
</resources>