<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gridview_linear_rectangle"
    tools:context=".activities.CreatePostActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/create_your_post"
                        android:textSize="22sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20sp"
                        android:text="@string/description"
                        android:textColor="@color/dark_grey"/>
                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_emoji_24"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="120dp"/>

            </LinearLayout>

            <EditText
                android:id="@+id/edt_post_description"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:inputType="textEmailAddress"
                android:drawablePadding="10dp"
                android:hint="@string/type_something_here"
                android:textColorHint="@color/light_black"
                android:background="@drawable/edittext_rectangle"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:autofillHints="" />

            <ImageView
                android:id="@+id/img_upload_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/baseline_image_24"
                android:scaleType="fitXY"
                android:background="@drawable/edittext_rectangle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_vertical"
                android:gravity="end">

                <ImageButton
                    android:id="@+id/camera_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/baseline_photo_camera_24"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/camera_photo"/>

                <ImageButton
                    android:id="@+id/gallery_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/baseline_folder_special_24"
                    android:contentDescription="@string/file_photo" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/contact_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/can_publish_your_contact"/>

            <Button
                android:id="@+id/share_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:drawableStart="@drawable/baseline_share_24"
                android:background="@drawable/button_rectangle"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/orange"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/bannerAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adUnitId="@string/banner_ad_id_test"
        ads:adSize="SMART_BANNER"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>