<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.SignUpActivity">

    <ImageView
        android:id="@+id/img"
    android:layout_width="match_parent"
    android:layout_height="350dp"
        android:src="@drawable/sign_up"
        android:scaleType="centerCrop"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
    app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext_rectangle"
        app:layout_constraintTop_toBottomOf="@id/img">
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:inputType="text"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="10dp"
            android:hint="@string/name"
            android:layout_marginStart="10dp"
            style="@style/EditTextNoUnderline"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_light"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:inputType="phone"
            android:drawableStart="@drawable/baseline_phone_24"
            android:drawablePadding="10dp"
            android:hint="@string/mobile_no"
            android:layout_marginStart="10dp"
            style="@style/EditTextNoUnderline"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_light"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/baseline_email_24"
            android:hint="@string/email"
            android:drawablePadding="10dp"
            android:layout_marginStart="10dp"
            style="@style/EditTextNoUnderline"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_light"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:layout_marginStart="10dp"
            style="@style/EditTextNoUnderline"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:text="@string/signup"
        android:background="@drawable/button_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

    <LinearLayout
        android:id="@+id/txt_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/btn_signUp">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/already_have_an_account"
        android:textSize="25sp"
        android:textColor="@color/light_black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_here"
                android:textSize="25sp"
                android:textColor="@color/blue"/>

            <View
                android:layout_width="111dp"
                android:layout_height="1dp"
                android:background="@color/light_black"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>