<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_your_profile_here"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="120dp"
            android:layout_height="124dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:src="@drawable/man" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/camera"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="-28dp"
            android:background="@drawable/bg_circle"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/baseline_photo_camera_24" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="10dp"
                android:background="@color/grey"
                android:hint="@string/enter_your_full_name"
                android:textColorHint="@color/light_black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/edt_mobile"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="phone"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="10dp"
                android:background="@color/grey"
                android:hint="@string/enter_your_mobile_no"
                android:textColorHint="@color/light_black"
                android:padding="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="20dp"
                android:autofillHints="" />

        <Button
            android:id="@+id/update_userprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_now"
            android:background="@drawable/button_rectangle"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>