<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.SignInActivity">



    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/sign_in"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:background="@drawable/edittext_rectangle"
        app:layout_constraintTop_toBottomOf="@id/img">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/google"/>
        <TextView
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/light_black"
            android:textSize="25sp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <View
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:background="@color/grey"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_continue_with"
            android:textSize="22sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/light_black"/>

        <View
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:background="@color/grey"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
<LinearLayout
    android:id="@id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:background="@drawable/edittext_rectangle"
    app:layout_constraintTop_toBottomOf="@id/linearLayout1">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="10dp"
            android:layout_marginStart="10dp"
            style="@style/EditTextNoUnderline"
            android:hint="@string/email"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_light"
        android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="10dp"
            android:layout_marginStart="10dp"
            style="@style/EditTextNoUnderline"
            android:hint="@string/password"/>

</LinearLayout>

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:text="@string/signin"
        android:background="@drawable/button_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>

    <LinearLayout
        android:id="@id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/btn_signIn">

    <TextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="163dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textColor="@color/light_black"
        android:textSize="25sp"/>

        <View
            android:layout_width="160dp"
            android:layout_height="1dp"
            android:background="@color/light_black"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/txt_Sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/linear">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_a_member"
        android:textAlignment="textEnd"
        android:textColor="@color/light_black"
        android:textSize="25sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textSize="25sp"
            android:textColor="@color/blue"/>

        <View
            android:layout_width="165dp"
            android:layout_height="1dp"
            android:background="@color/light_black"
            android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>